# Coly

./: .gitignore  1.cly  1.cpp  1.ilk  11.cly  12.cly  CNAME  Coly.cpp  Coly.hpp  ColyServer  ColyVariableSyncService.cpp  Document.md  Document_English.md  GXPass.hpp  InteractiveColy.cly  LICENSE  NOTICE  README.md  VariableSyncService.hpp  build.bat  build.sh  coly  commitvaroperations.cly  install.bat  install.sh  libVarContainer.hpp  server  server.cpp  tempCodeRunnerFile.coly  tempCodeRunnerFile.cpp  tempCodeRunnerFile.python  teslib.cly  test.cly  test____.cly  test_call.cly  test_usewithoutwait.cly  test_while.cly  testcolydoc.cly  testsynccpp.cly  uninstall.bat  (+1 more)
.history/: 111_20250728165654.cpp  11_20250715215247.cly  11_20250715215252.cly  11_20250715215306.cly  11_20250715215459.cly  11_20250715215522.cly  11_20250715215526.cly  11_20250715215528.cly  11_20250715215532.cly  11_20250715215534.cly  11_20250715215536.cly  11_20250715215537.cly  11_20250715215542.cly  11_20250715215600.cly  11_20250715215614.cly  11_20250715215629.cly  11_20250715215633.cly  11_20250715215648.cly  11_20250715215651.cly  11_20250715215655.cly  11_20250715215658.cly  11_20250715215702.cly  11_20250715215707.cly  11_20250715215714.cly  11_20250715215842.cly  12_20250715220250.cly  12_20250715220252.cly  12_20250715220311.cly  12_20250715220314.cly  12_20250715220318.cly  12_20250715220320.cly  12_20250715220322.cly  (+1963 more)
LanguageSyncLib/ColyPythonSync/: ColyPythonSync.py  pyproject.toml
LanguageSyncLib/ColyPythonSync/ColyPythonSync.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+260 files in other folders)
